--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/teixeira-fernando/CypressFrameworkSetup#readme",
   "devDependencies": {
+    "@cypress/code-coverage": "^1.10.4",
+    "@testing-library/cypress": "^5.0.2",
     "cypress": "^3.7.0",
-    "cypress-cucumber-preprocessor": "^1.18.0"
+    "cypress-cucumber-preprocessor": "^1.18.0",
+    "cypress-failed-log": "^2.5.1",
+    "istanbul-lib-coverage": "^2.0.5",
+    "nyc": "^14.1.1"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
