--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "./node_modules/.bin/cypress run",
     "cypress:open": "./node_modules/.bin/cypress open",
     "combine-reports": "mochawesome-merge --reportDir cypress/reports/mocha > mochareports/report.json",
-    "generate-report": "marge mochareports/*.json -f report -o mochareports"
+    "generate-report": "marge mochareports/*.json -f report -o mochareports --charts=true",
+    "cypress:docker": "docker run -it -v $PWD:/e2e -w /e2e cypress/included:3.7.0"
   },
   "repository": {
     "type": "git",
