--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cypress:open": "./node_modules/.bin/cypress open",
     "combine-reports": "mochawesome-merge --reportDir cypress/reports/mocha > mochareports/report.json",
     "generate-report": "marge mochareports/*.json -f report -o mochareports --charts=true",
-    "cypress:docker": "docker run -it -v $PWD:/e2e -w /e2e cypress/included:3.7.0"
+    "cypress:docker": "docker run -it -v $PWD:/e2e -w /e2e cypress/included:3.7.0",
+    "cypress:test:qa": "./node_modules/.bin/cypress run --env name=qa --browser chrome"
   },
   "repository": {
     "type": "git",
