--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/teixeira-fernando/CypressFrameworkSetup#readme",
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.9.2",
     "@cypress/code-coverage": "^1.10.4",
     "@testing-library/cypress": "^5.0.2",
     "cypress": "^3.7.0",
